fix drawer overlap

--- a/public/css/ElementMenu.css
+++ b/public/css/ElementMenu.css
@@ -1,5 +1,5 @@
 #ElementMenu .element-menu-popup {
-    z-index: 1000;
+    z-index: 1500;
 }
 
 #ElementMenu .menu-item {
